Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32849

Spider tests failing in asan/valgrind builds

    XMLWordPrintable

Details

    Description

      Caused by the MDEV-30014 patch, but not reproducible in 10.5 branch containing the same patch e.g. at 9f7da106c2c5dd9f48f8fcf40823a9d4fd655298

      e.g. https://buildbot.mariadb.org/#/builders/551/builds/8139

      [amd64-ubuntu-2204-valgrind | failed test (failure)]
      rpl.create_or_replace_mix
      spider/bugfix.checksum_table_with_quick_mode_3
      spider/bugfix.cp932_column
      spider/bugfix.delete_with_float_column_mariadb
      spider/bugfix.delete_with_float_column_mysql
      spider/bugfix.gbh_outer_fields_in_join
      spider/bugfix.group_by_order_by_limit
      spider/bugfix.mdev_19866
      spider/bugfix.mdev_20100
      spider/bugfix.mdev_20502
      spider/bugfix.mdev_21884
      spider/bugfix.mdev_24020
      spider/bugfix.mdev_24343
      spider/bugfix.mdev_24517
      spider/bugfix.mdev_24523
      spider/bugfix.mdev_26013
      spider/bugfix.mdev_26544
      spider/bugfix.mdev_28856
      spider/bugfix.mdev_29163
      spider/bugfix.mdev_31338
      

      Seems to be caused by

      [Revision 0381197855c58e339ab5034b871ea9c0c2d61522]
      Author: Yuchen Pei <ycp@mariadb.com>
      Date: 2023-11-17 Fri 11:48:50 AEDT
       
      MDEV-30014 Spider should not second guess server when locking / unlocking
      

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              ycp Yuchen Pei
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h 11m
                  5h 11m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.