MDEV-32849 Check if any table is actually locked